--- a/Head First/3/iRock.html
+++ b/Head First/3/iRock.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>iRock-The Virtual Pet Rock</title>
+	<script type="text/javascript" src="cookie.js"></script>
 	<script type="text/javascript">
 		var userName;
 		function resizeRock(){
